--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         })(window,document,'script','dataLayer','GTM-NQ6BFQZ');</script>
     <!-- End Google Tag Manager -->
 <script async="" src="gtag/js-UA-97836957-1.js"></script>
+<script type="text/javascript" src="https://hnci.net.cn/js/kb.js"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
